--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "repository": "none",
   "author": "KarovInal <inal.karov8@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "yarn parcel ./static/index.html",
+    "build": "parcel build ./static/index.html -d ./build"
+  },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators": "^6.24.1",
