--- a/.babelrc
+++ b/.babelrc
@@ -20,6 +20,7 @@
       "alias": {
         "Components": "./src/components",
         "Const":      "./src/constants",
+        "Ducks":      "./src/ducks",
         "Data":       "./src/data"
       }
     }]
