--- a/package.json
+++ b/package.json
@@ -21,18 +21,22 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "parcel-bundler": "^1.7.0"
+    "lodash": "^4.17.5",
+    "parcel-bundler": "^1.7.0",
+    "redux-logger": "^3.0.6"
   },
   "dependencies": {
     "components": "^0.1.0",
     "material-ui": "^1.0.0-beta.40",
-    "react": ">=15",
+    "react": ">= 0.14.0 < 17.0.0-0",
     "react-dom": "^16.3.1",
     "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
+    "styled-components": "^3.2.5"
   }
 }
