--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-runtime": "^6.26.0",
     "lodash": "^4.17.5",
     "parcel-bundler": "^1.7.0",
+    "react-d3-graph": "^1.2.0",
     "redux-logger": "^3.0.6"
   },
   "dependencies": {
